fixed recipe details images when they become too big

--- a/website/public/css/style.css
+++ b/website/public/css/style.css
@@ -218,13 +218,24 @@ h3 {
  }
 
  .img-receptdetail {
-   max-width: 100%;
+   max-width: 532px;
    width: 65%;
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
+
+ @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .img-receptdetail {
+    max-width: 532px;
+    width: 65%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 
  .receptdetail {
   padding-top: 100px;
